[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/shaders/materials/terrain/cement.tres" type="Material" id=1]
[ext_resource path="res://effects/visual/explosion_nuke.tscn" type="PackedScene" id=2]
[ext_resource path="res://weapons/nuke/nuke_mesh.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/shaders/materials/vehicles/car_blue_body.tres" type="Material" id=4]
[ext_resource path="res://weapons/explosive/explosive.gd" type="Script" id=5]


[sub_resource type="PhysicsMaterial" id=1]
bounce = 0.18

[sub_resource type="CylinderShape" id=12]
height = 1.08911

[sub_resource type="CapsuleMesh" id=21]

[sub_resource type="CubeMesh" id=22]

[sub_resource type="CylinderMesh" id=11]
height = 1.091

[sub_resource type="CubeMesh" id=13]

[node name="Explosive" type="RigidBody" groups=["bomb"]]
mass = 20.0
physics_material_override = SubResource( 1 )
contacts_reported = 1
contact_monitor = true
script = ExtResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, 0, 0 )
shape = SubResource( 12 )

[node name="SpotLight" type="SpotLight" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
light_color = Color( 1, 0, 0, 1 )
spot_range = 150.0
spot_angle = 11.97

[node name="NukeMeshes" parent="." instance=ExtResource( 3 )]
visible = false

[node name="BombMeshes" type="Spatial" parent="."]
visible = false

[node name="Body" type="MeshInstance" parent="BombMeshes"]
transform = Transform( 0.291023, 0, 0, 0, -0.00910172, -0.3325, 0, 0.295343, -0.00808462, 0, 0.341193, 0 )
mesh = SubResource( 21 )
skeleton = NodePath("../..")
material/0 = ExtResource( 4 )

[node name="Fin1" type="MeshInstance" parent="BombMeshes"]
transform = Transform( 0.249905, 0, 0, 0, 0.257885, 0, 0, 0, 0.0271301, 0, 0.880656, 0 )
mesh = SubResource( 22 )
skeleton = NodePath("../..")
material/0 = ExtResource( 4 )

[node name="Fin2" type="MeshInstance" parent="BombMeshes"]
transform = Transform( -1.09237e-08, 0, -0.0271301, 0, 0.257885, 0, 0.249905, 0, -1.18589e-09, 0, 0.866959, 0 )
mesh = SubResource( 22 )
skeleton = NodePath("../..")
material/0 = ExtResource( 4 )

[node name="MineMeshes" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0483567, 0 )

[node name="Main" type="MeshInstance" parent="MineMeshes"]
transform = Transform( 0.3, 0, 0, 0, 0.2, 0, 0, 0, 0.3, 0, 0, 0 )
mesh = SubResource( 11 )
skeleton = NodePath("../..")
material/0 = ExtResource( 1 )

[node name="Top" type="MeshInstance" parent="MineMeshes"]
transform = Transform( 0.1, 0, 0, 0, 0.05, 0, 0, 0, 0.1, 0, 0.15282, 0 )
mesh = SubResource( 13 )
skeleton = NodePath("../..")
material/0 = ExtResource( 1 )

[node name="OmniLight" type="OmniLight" parent="MineMeshes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.278049, 0 )
light_color = Color( 1, 0, 0, 1 )

[node name="ExplosionNuke" parent="." instance=ExtResource( 2 )]

[node name="LineOfSightCheckTruckMine" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.55315, 0 )

[connection signal="body_entered" from="." to="." method="_on_Bomb_body_entered"]
